--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "url": "git+https://github.com/ibenderina/frontend-project-lvl1.git"
   },
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,9 +23,11 @@
   "homepage": "https://github.com/ibenderina/frontend-project-lvl1#readme",
   "devDependencies": {
     "eslint": "^7.19.0",
-    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
     "readline-sync": "^1.4.10"
   },
   "dependencies": {
